parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> devices cmds
Rule 2     devices -> device devices
Rule 3     devices -> device
Rule 4     device -> DISPOSITIVO DOISPT ABRECH ID FECHACH
Rule 5     device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH
Rule 6     cmds -> cmd PONTO cmds
Rule 7     cmds -> cmd PONTO
Rule 8     cmd -> atrib
Rule 9     cmd -> obsact
Rule 10    cmd -> act
Rule 11    atrib -> SET ID IGUAL var
Rule 12    var -> NUM
Rule 13    var -> BOOL
Rule 14    obsact -> SE obs ENTAO act
Rule 15    obsact -> SE obs ENTAO act SENAO act
Rule 16    obs -> ID OPLOGIC var
Rule 17    obs -> ID OPLOGIC var E obs
Rule 18    act -> LIGAR ID
Rule 19    act -> DESLIGAR ID
Rule 20    act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR ID
Rule 21    act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR ID
Rule 22    act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list
Rule 23    act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list
Rule 24    id_list -> ID VIRG id_list
Rule 25    id_list -> ID

Terminals, with rules where they appear

ABRECH               : 4 5
ABREPAR              : 20 21 22 23
ALERTA               : 20 21 22 23
BOOL                 : 13
DESLIGAR             : 19
DISPOSITIVO          : 4 5
DOISPT               : 4 5 22 23
E                    : 17
ENTAO                : 14 15
ENVIAR               : 20 21 22 23
FECHACH              : 4 5
FECHAPAR             : 20 21 22 23
ID                   : 4 5 5 11 16 17 18 19 20 21 21 23 24 25
IGUAL                : 11
LIGAR                : 18
NUM                  : 12
OPLOGIC              : 16 17
PARA                 : 22 23
PONTO                : 6 7
SE                   : 14 15
SENAO                : 15
SET                  : 11
STRING               : 20 21 22 23
TODOS                : 22 23
VIRG                 : 5 21 23 24
error                : 

Nonterminals, with rules where they appear

act                  : 10 14 15 15
atrib                : 8
cmd                  : 6 7
cmds                 : 1 6
device               : 2 3
devices              : 1 2
id_list              : 22 23 24
obs                  : 14 15 17
obsact               : 9
program              : 0
var                  : 11 16 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . devices cmds
    (2) devices -> . device devices
    (3) devices -> . device
    (4) device -> . DISPOSITIVO DOISPT ABRECH ID FECHACH
    (5) device -> . DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH

    DISPOSITIVO     shift and go to state 4

    program                        shift and go to state 1
    devices                        shift and go to state 2
    device                         shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> devices . cmds
    (6) cmds -> . cmd PONTO cmds
    (7) cmds -> . cmd PONTO
    (8) cmd -> . atrib
    (9) cmd -> . obsact
    (10) cmd -> . act
    (11) atrib -> . SET ID IGUAL var
    (14) obsact -> . SE obs ENTAO act
    (15) obsact -> . SE obs ENTAO act SENAO act
    (18) act -> . LIGAR ID
    (19) act -> . DESLIGAR ID
    (20) act -> . ENVIAR ALERTA ABREPAR STRING FECHAPAR ID
    (21) act -> . ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR ID
    (22) act -> . ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list
    (23) act -> . ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list

    SET             shift and go to state 10
    SE              shift and go to state 11
    LIGAR           shift and go to state 12
    DESLIGAR        shift and go to state 13
    ENVIAR          shift and go to state 14

    cmds                           shift and go to state 5
    cmd                            shift and go to state 6
    atrib                          shift and go to state 7
    obsact                         shift and go to state 8
    act                            shift and go to state 9

state 3

    (2) devices -> device . devices
    (3) devices -> device .
    (2) devices -> . device devices
    (3) devices -> . device
    (4) device -> . DISPOSITIVO DOISPT ABRECH ID FECHACH
    (5) device -> . DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH

    SET             reduce using rule 3 (devices -> device .)
    SE              reduce using rule 3 (devices -> device .)
    LIGAR           reduce using rule 3 (devices -> device .)
    DESLIGAR        reduce using rule 3 (devices -> device .)
    ENVIAR          reduce using rule 3 (devices -> device .)
    DISPOSITIVO     shift and go to state 4

    device                         shift and go to state 3
    devices                        shift and go to state 15

state 4

    (4) device -> DISPOSITIVO . DOISPT ABRECH ID FECHACH
    (5) device -> DISPOSITIVO . DOISPT ABRECH ID VIRG ID FECHACH

    DOISPT          shift and go to state 16


state 5

    (1) program -> devices cmds .

    $end            reduce using rule 1 (program -> devices cmds .)


state 6

    (6) cmds -> cmd . PONTO cmds
    (7) cmds -> cmd . PONTO

    PONTO           shift and go to state 17


state 7

    (8) cmd -> atrib .

    PONTO           reduce using rule 8 (cmd -> atrib .)


state 8

    (9) cmd -> obsact .

    PONTO           reduce using rule 9 (cmd -> obsact .)


state 9

    (10) cmd -> act .

    PONTO           reduce using rule 10 (cmd -> act .)


state 10

    (11) atrib -> SET . ID IGUAL var

    ID              shift and go to state 18


state 11

    (14) obsact -> SE . obs ENTAO act
    (15) obsact -> SE . obs ENTAO act SENAO act
    (16) obs -> . ID OPLOGIC var
    (17) obs -> . ID OPLOGIC var E obs

    ID              shift and go to state 20

    obs                            shift and go to state 19

state 12

    (18) act -> LIGAR . ID

    ID              shift and go to state 21


state 13

    (19) act -> DESLIGAR . ID

    ID              shift and go to state 22


state 14

    (20) act -> ENVIAR . ALERTA ABREPAR STRING FECHAPAR ID
    (21) act -> ENVIAR . ALERTA ABREPAR STRING VIRG ID FECHAPAR ID
    (22) act -> ENVIAR . ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list
    (23) act -> ENVIAR . ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list

    ALERTA          shift and go to state 23


state 15

    (2) devices -> device devices .

    SET             reduce using rule 2 (devices -> device devices .)
    SE              reduce using rule 2 (devices -> device devices .)
    LIGAR           reduce using rule 2 (devices -> device devices .)
    DESLIGAR        reduce using rule 2 (devices -> device devices .)
    ENVIAR          reduce using rule 2 (devices -> device devices .)


state 16

    (4) device -> DISPOSITIVO DOISPT . ABRECH ID FECHACH
    (5) device -> DISPOSITIVO DOISPT . ABRECH ID VIRG ID FECHACH

    ABRECH          shift and go to state 24


state 17

    (6) cmds -> cmd PONTO . cmds
    (7) cmds -> cmd PONTO .
    (6) cmds -> . cmd PONTO cmds
    (7) cmds -> . cmd PONTO
    (8) cmd -> . atrib
    (9) cmd -> . obsact
    (10) cmd -> . act
    (11) atrib -> . SET ID IGUAL var
    (14) obsact -> . SE obs ENTAO act
    (15) obsact -> . SE obs ENTAO act SENAO act
    (18) act -> . LIGAR ID
    (19) act -> . DESLIGAR ID
    (20) act -> . ENVIAR ALERTA ABREPAR STRING FECHAPAR ID
    (21) act -> . ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR ID
    (22) act -> . ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list
    (23) act -> . ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list

    $end            reduce using rule 7 (cmds -> cmd PONTO .)
    SET             shift and go to state 10
    SE              shift and go to state 11
    LIGAR           shift and go to state 12
    DESLIGAR        shift and go to state 13
    ENVIAR          shift and go to state 14

    cmd                            shift and go to state 6
    cmds                           shift and go to state 25
    atrib                          shift and go to state 7
    obsact                         shift and go to state 8
    act                            shift and go to state 9

state 18

    (11) atrib -> SET ID . IGUAL var

    IGUAL           shift and go to state 26


state 19

    (14) obsact -> SE obs . ENTAO act
    (15) obsact -> SE obs . ENTAO act SENAO act

    ENTAO           shift and go to state 27


state 20

    (16) obs -> ID . OPLOGIC var
    (17) obs -> ID . OPLOGIC var E obs

    OPLOGIC         shift and go to state 28


state 21

    (18) act -> LIGAR ID .

    PONTO           reduce using rule 18 (act -> LIGAR ID .)
    SENAO           reduce using rule 18 (act -> LIGAR ID .)


state 22

    (19) act -> DESLIGAR ID .

    PONTO           reduce using rule 19 (act -> DESLIGAR ID .)
    SENAO           reduce using rule 19 (act -> DESLIGAR ID .)


state 23

    (20) act -> ENVIAR ALERTA . ABREPAR STRING FECHAPAR ID
    (21) act -> ENVIAR ALERTA . ABREPAR STRING VIRG ID FECHAPAR ID
    (22) act -> ENVIAR ALERTA . ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list
    (23) act -> ENVIAR ALERTA . ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list

    ABREPAR         shift and go to state 29


state 24

    (4) device -> DISPOSITIVO DOISPT ABRECH . ID FECHACH
    (5) device -> DISPOSITIVO DOISPT ABRECH . ID VIRG ID FECHACH

    ID              shift and go to state 30


state 25

    (6) cmds -> cmd PONTO cmds .

    $end            reduce using rule 6 (cmds -> cmd PONTO cmds .)


state 26

    (11) atrib -> SET ID IGUAL . var
    (12) var -> . NUM
    (13) var -> . BOOL

    NUM             shift and go to state 32
    BOOL            shift and go to state 33

    var                            shift and go to state 31

state 27

    (14) obsact -> SE obs ENTAO . act
    (15) obsact -> SE obs ENTAO . act SENAO act
    (18) act -> . LIGAR ID
    (19) act -> . DESLIGAR ID
    (20) act -> . ENVIAR ALERTA ABREPAR STRING FECHAPAR ID
    (21) act -> . ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR ID
    (22) act -> . ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list
    (23) act -> . ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list

    LIGAR           shift and go to state 12
    DESLIGAR        shift and go to state 13
    ENVIAR          shift and go to state 14

    act                            shift and go to state 34

state 28

    (16) obs -> ID OPLOGIC . var
    (17) obs -> ID OPLOGIC . var E obs
    (12) var -> . NUM
    (13) var -> . BOOL

    NUM             shift and go to state 32
    BOOL            shift and go to state 33

    var                            shift and go to state 35

state 29

    (20) act -> ENVIAR ALERTA ABREPAR . STRING FECHAPAR ID
    (21) act -> ENVIAR ALERTA ABREPAR . STRING VIRG ID FECHAPAR ID
    (22) act -> ENVIAR ALERTA ABREPAR . STRING FECHAPAR PARA TODOS DOISPT id_list
    (23) act -> ENVIAR ALERTA ABREPAR . STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list

    STRING          shift and go to state 36


state 30

    (4) device -> DISPOSITIVO DOISPT ABRECH ID . FECHACH
    (5) device -> DISPOSITIVO DOISPT ABRECH ID . VIRG ID FECHACH

    FECHACH         shift and go to state 37
    VIRG            shift and go to state 38


state 31

    (11) atrib -> SET ID IGUAL var .

    PONTO           reduce using rule 11 (atrib -> SET ID IGUAL var .)


state 32

    (12) var -> NUM .

    PONTO           reduce using rule 12 (var -> NUM .)
    E               reduce using rule 12 (var -> NUM .)
    ENTAO           reduce using rule 12 (var -> NUM .)


state 33

    (13) var -> BOOL .

    PONTO           reduce using rule 13 (var -> BOOL .)
    E               reduce using rule 13 (var -> BOOL .)
    ENTAO           reduce using rule 13 (var -> BOOL .)


state 34

    (14) obsact -> SE obs ENTAO act .
    (15) obsact -> SE obs ENTAO act . SENAO act

    PONTO           reduce using rule 14 (obsact -> SE obs ENTAO act .)
    SENAO           shift and go to state 39


state 35

    (16) obs -> ID OPLOGIC var .
    (17) obs -> ID OPLOGIC var . E obs

    ENTAO           reduce using rule 16 (obs -> ID OPLOGIC var .)
    E               shift and go to state 40


state 36

    (20) act -> ENVIAR ALERTA ABREPAR STRING . FECHAPAR ID
    (21) act -> ENVIAR ALERTA ABREPAR STRING . VIRG ID FECHAPAR ID
    (22) act -> ENVIAR ALERTA ABREPAR STRING . FECHAPAR PARA TODOS DOISPT id_list
    (23) act -> ENVIAR ALERTA ABREPAR STRING . VIRG ID FECHAPAR PARA TODOS DOISPT id_list

    FECHAPAR        shift and go to state 41
    VIRG            shift and go to state 42


state 37

    (4) device -> DISPOSITIVO DOISPT ABRECH ID FECHACH .

    DISPOSITIVO     reduce using rule 4 (device -> DISPOSITIVO DOISPT ABRECH ID FECHACH .)
    SET             reduce using rule 4 (device -> DISPOSITIVO DOISPT ABRECH ID FECHACH .)
    SE              reduce using rule 4 (device -> DISPOSITIVO DOISPT ABRECH ID FECHACH .)
    LIGAR           reduce using rule 4 (device -> DISPOSITIVO DOISPT ABRECH ID FECHACH .)
    DESLIGAR        reduce using rule 4 (device -> DISPOSITIVO DOISPT ABRECH ID FECHACH .)
    ENVIAR          reduce using rule 4 (device -> DISPOSITIVO DOISPT ABRECH ID FECHACH .)


state 38

    (5) device -> DISPOSITIVO DOISPT ABRECH ID VIRG . ID FECHACH

    ID              shift and go to state 43


state 39

    (15) obsact -> SE obs ENTAO act SENAO . act
    (18) act -> . LIGAR ID
    (19) act -> . DESLIGAR ID
    (20) act -> . ENVIAR ALERTA ABREPAR STRING FECHAPAR ID
    (21) act -> . ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR ID
    (22) act -> . ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list
    (23) act -> . ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list

    LIGAR           shift and go to state 12
    DESLIGAR        shift and go to state 13
    ENVIAR          shift and go to state 14

    act                            shift and go to state 44

state 40

    (17) obs -> ID OPLOGIC var E . obs
    (16) obs -> . ID OPLOGIC var
    (17) obs -> . ID OPLOGIC var E obs

    ID              shift and go to state 20

    obs                            shift and go to state 45

state 41

    (20) act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR . ID
    (22) act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR . PARA TODOS DOISPT id_list

    ID              shift and go to state 46
    PARA            shift and go to state 47


state 42

    (21) act -> ENVIAR ALERTA ABREPAR STRING VIRG . ID FECHAPAR ID
    (23) act -> ENVIAR ALERTA ABREPAR STRING VIRG . ID FECHAPAR PARA TODOS DOISPT id_list

    ID              shift and go to state 48


state 43

    (5) device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID . FECHACH

    FECHACH         shift and go to state 49


state 44

    (15) obsact -> SE obs ENTAO act SENAO act .

    PONTO           reduce using rule 15 (obsact -> SE obs ENTAO act SENAO act .)


state 45

    (17) obs -> ID OPLOGIC var E obs .

    ENTAO           reduce using rule 17 (obs -> ID OPLOGIC var E obs .)


state 46

    (20) act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR ID .

    PONTO           reduce using rule 20 (act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR ID .)
    SENAO           reduce using rule 20 (act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR ID .)


state 47

    (22) act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA . TODOS DOISPT id_list

    TODOS           shift and go to state 50


state 48

    (21) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID . FECHAPAR ID
    (23) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID . FECHAPAR PARA TODOS DOISPT id_list

    FECHAPAR        shift and go to state 51


state 49

    (5) device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH .

    DISPOSITIVO     reduce using rule 5 (device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH .)
    SET             reduce using rule 5 (device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH .)
    SE              reduce using rule 5 (device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH .)
    LIGAR           reduce using rule 5 (device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH .)
    DESLIGAR        reduce using rule 5 (device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH .)
    ENVIAR          reduce using rule 5 (device -> DISPOSITIVO DOISPT ABRECH ID VIRG ID FECHACH .)


state 50

    (22) act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS . DOISPT id_list

    DOISPT          shift and go to state 52


state 51

    (21) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR . ID
    (23) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR . PARA TODOS DOISPT id_list

    ID              shift and go to state 53
    PARA            shift and go to state 54


state 52

    (22) act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT . id_list
    (24) id_list -> . ID VIRG id_list
    (25) id_list -> . ID

    ID              shift and go to state 56

    id_list                        shift and go to state 55

state 53

    (21) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR ID .

    PONTO           reduce using rule 21 (act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR ID .)
    SENAO           reduce using rule 21 (act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR ID .)


state 54

    (23) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA . TODOS DOISPT id_list

    TODOS           shift and go to state 57


state 55

    (22) act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list .

    PONTO           reduce using rule 22 (act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list .)
    SENAO           reduce using rule 22 (act -> ENVIAR ALERTA ABREPAR STRING FECHAPAR PARA TODOS DOISPT id_list .)


state 56

    (24) id_list -> ID . VIRG id_list
    (25) id_list -> ID .

    VIRG            shift and go to state 58
    PONTO           reduce using rule 25 (id_list -> ID .)
    SENAO           reduce using rule 25 (id_list -> ID .)


state 57

    (23) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS . DOISPT id_list

    DOISPT          shift and go to state 59


state 58

    (24) id_list -> ID VIRG . id_list
    (24) id_list -> . ID VIRG id_list
    (25) id_list -> . ID

    ID              shift and go to state 56

    id_list                        shift and go to state 60

state 59

    (23) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT . id_list
    (24) id_list -> . ID VIRG id_list
    (25) id_list -> . ID

    ID              shift and go to state 56

    id_list                        shift and go to state 61

state 60

    (24) id_list -> ID VIRG id_list .

    PONTO           reduce using rule 24 (id_list -> ID VIRG id_list .)
    SENAO           reduce using rule 24 (id_list -> ID VIRG id_list .)


state 61

    (23) act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list .

    PONTO           reduce using rule 23 (act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list .)
    SENAO           reduce using rule 23 (act -> ENVIAR ALERTA ABREPAR STRING VIRG ID FECHAPAR PARA TODOS DOISPT id_list .)

